--- a/.github/workflows/ci_push.yml
+++ b/.github/workflows/ci_push.yml
@@ -1,28 +1,29 @@
-# workflowの名前
 name: Backend Test Push
-# ワークフローを実行する条件
+
 on:
   push:
-    branches-ignore:
-      - "main"
-# 実行するジョブを定義する
+
 jobs:
   golang-test:
     name: test
     runs-on: ubuntu-latest
     steps:
-      # ソースをチェックアウトする
+      - name: tag release skip
+        run: |
+          if [ "${{ startsWith(github.ref, 'refs/tags/') }}" = "true" ]; then
+            exit 0
+          fi
+
       - uses: actions/checkout@v2
 
-      # Goのセットアップをする
       - name: Set up Go
         uses: actions/setup-go@v2
         with:
           go-version: 1.21
-      # Goのテストを実行する
+
       - name: testing
         run: |
           go test ./... -coverprofile=coverage.out
-      # カバレッジれポートを出力する
+
       - name: create report
         uses: k1LoW/octocov-action@v0
